spacing fix

--- a/style.css
+++ b/style.css
@@ -144,7 +144,7 @@ nav > a, nav > p
 
 footer
 {
-    width: 100%;
+    width: 80%;
     padding: 40px 5%;
     margin: 0;
     background-color: var(--dark-green);
@@ -152,9 +152,10 @@ footer
 
 footer > p, footer > a
 {
-    letter-spacing: 1px;
+    text-decoration: none;
+    font-weight: 100;
     color: var(--soft-white);
-    font-size: 1rem;
+    font-size: 0.8rem;
     display: inline;
     font-family: var(--apercu);
     transition: color 0.2s linear;
@@ -168,4 +169,5 @@ footer > a:hover
 footer > span
 {
     margin: 0px 20px;
+    display: inline-block;
 }
